loading images now, we need to fix the css image stuff

--- a/www/index.html
+++ b/www/index.html
@@ -13,19 +13,19 @@
 <body>
 <div data-role="tabs" id="page1">
     <div data-role="header">
-        <a href="#" class="ui-btn-right" data-icon="gear"></a>
+        <!--<button href="#" class="ui-btn-right" data-icon="gear"></button>-->
         <h1>Pokedex</h1>
         <div data-role="navbar">
             <ul>
-                <li><a href="#pokemonlist" class="ui-btn-active">One</a></li>
-                <li><a href="#tab2">Two</a></li>
-                <li><a href="#tab3">Three</a></li>
+                <li><a href="#pokemonlist" class="ui-btn-active">Pokemons</a></li>
+                <li><a href="#tab2">Vangen</a></li>
+                <li><a href="#tab3">Ruilen</a></li>
             </ul>
         </div>
     </div>
     <div data-role="tab" class="ui-content" id="pokemonlist">
         <ul data-role="listview" id="pokelist">
-
+            <li><a href="#page"><img src="http://pokeapi.co/media/sprites/pokemon/1.png"/>hello</a></li>
         </ul>
     </div>
     <div data-role="tab" class="ui-content" id="tab2">
