--- a/www/index.html
+++ b/www/index.html
@@ -11,33 +11,38 @@
     <title>Pokedex</title>
 </head>
 <body>
-<div data-role="tabs" id="page1">
-    <div data-role="header">
-        <!--<button href="#" class="ui-btn-right" data-icon="gear"></button>-->
-        <h1>Pokedex</h1>
-        <div data-role="navbar">
-            <ul>
-                <li><a href="#pokemonlist" class="ui-btn-active">Pokemons</a></li>
-                <li><a href="#tab2">Vangen</a></li>
-                <li><a href="#tab3">Ruilen</a></li>
+<div data-role="page" id="home">
+    <div data-role="tabs">
+        <div data-role="header">
+            <!--<button href="#" class="ui-btn-right" data-icon="gear"></button>-->
+            <h1>Pokedex</h1>
+            <div data-role="navbar">
+                <ul>
+                    <li><a href="#pokemonlist" class="ui-btn-active">Pokemons</a></li>
+                    <li><a href="#tab2">Vangen</a></li>
+                    <li><a href="#tab3">Ruilen</a></li>
+                </ul>
+            </div>
+        </div>
+        <div data-role="tab" class="ui-content" id="pokemonlist">
+            <ul data-role="listview" id="pokelist">
+
             </ul>
         </div>
-    </div>
-    <div data-role="tab" class="ui-content" id="pokemonlist">
-        <ul data-role="listview" id="pokelist">
-
-        </ul>
-    </div>
-    <div data-role="tab" class="ui-content" id="tab2">
-        <h1>Dit is tab 2</h1>
-    </div>
-    <div data-role="tab" class="ui-content" id="tab3">
-        <h1>Dit is tab 3</h1>
+        <div data-role="tab" class="ui-content" id="tab2">
+            <h1>Dit is tab 2</h1>
+        </div>
+        <div data-role="tab" class="ui-content" id="tab3">
+            <h1>Dit is tab 3</h1>
+        </div>
     </div>
 </div>
 <script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/api.js"></script>
+<script type="text/javascript" src="js/pokelistcontroller.js"></script>
+<script type="text/javascript" src="js/pokemoncontroller.js"></script>
+<script type="text/javascript" src="js/tabcontroller.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.mobile-1.4.5.js"></script>
 <script type="text/javascript">
