--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
     <div data-role="tabs">
         <div data-role="header">
             <!--<button href="#" class="ui-btn-right" data-icon="gear"></button>-->
-            <h1>Pokedex</h1>
+            <h1 id="header-title">Pokedex</h1>
             <div data-role="navbar">
                 <ul>
                     <li><a href="#pokemonlist" class="ui-btn-active">Pokemons</a></li>
@@ -30,7 +30,7 @@
             </ul>
         </div>
         <div data-role="tab" class="ui-content" id="tab2">
-            <h1>Dit is tab 2</h1>
+            <p id="location"></p>
         </div>
         <div data-role="tab" class="ui-content" id="tab3">
             <h1>Dit is tab 3</h1>
@@ -43,6 +43,7 @@
 <script type="text/javascript" src="js/pokelistcontroller.js"></script>
 <script type="text/javascript" src="js/pokemoncontroller.js"></script>
 <script type="text/javascript" src="js/tabcontroller.js"></script>
+<script type="text/javascript" src="js/catchcontroller.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.mobile-1.4.5.js"></script>
 <script type="text/javascript">
