detect and show location error

--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
             <h1 id="header-title">Pokedex</h1>
             <div data-role="navbar">
                 <ul>
-                    <li><a href="#pokemonlist" class="ui-btn-active">Pokemons</a></li>
+                    <li><a href="#pokemonlist" class="ui-btn-active ui-state-persist">Pokemons</a></li>
                     <li><a href="#tab2">Vangen</a></li>
                     <li><a href="#tab3">Ruilen</a></li>
                 </ul>
