started with database/local storage

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
         </div>
         <div data-role="tab" class="ui-content" id="tab2">
             <p id="location"></p>
+            <p id="foundpokemon"></p>
         </div>
         <div data-role="tab" class="ui-content" id="tab3">
             <h1>Dit is tab 3</h1>
