now we are also caching extra pokemon data

--- a/www/pokemonview.html
+++ b/www/pokemonview.html
@@ -1,9 +1,12 @@
 <div data-role="page" id="pokemonview">
-    <div data-role="header">
+    <div data-role="header" data-add-back-btn="true" data-direction="reverse">
         <!--<button href="#" class="ui-btn-right" data-icon="gear"></button>-->
         <h1 id="pokemontitle"></h1>
     </div>
     <div class="ui-content">
+        <p class="pokemonimage">
+
+        </p>
         <ul data-role="listview" id="pokedetails">
 
         </ul>
