fixed map stuff

--- a/www/navigatepokemon.html
+++ b/www/navigatepokemon.html
@@ -1,5 +1,5 @@
 <!-- AIzaSyBUPMulDSxD5nNSr8VG5LNsLI6hzQ-5wLU -->
-<div data-role="page" id="navigatepokemon" data-url="map-page">
+<div data-role="page" id="map-page" data-url="map-page">
     <div data-role="header" data-add-back-btn="true" data-direction="reverse">
         <h1>Ga naar pokemon</h1>
     </div>
