--- a/www/index.html
+++ b/www/index.html
@@ -51,9 +51,7 @@
 <script type="text/javascript" src="js/navigatecontroller.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.mobile-1.4.5.js"></script>
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUPMulDSxD5nNSr8VG5LNsLI6hzQ-5wLU&callback=initMap">
-</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUPMulDSxD5nNSr8VG5LNsLI6hzQ-5wLU&sensor=false"></script>
 <script type="text/javascript">
     app.initialize();
 </script>
