--- a/www/settings.html
+++ b/www/settings.html
@@ -1,5 +1,5 @@
 <div data-role="page" id="settingsview">
-    <div data-role="header">
+    <div data-role="header" data-add-back-btn="true" data-direction="reverse">
         <h1>Settings</h1>
     </div>
     <div class="ui-content">
