--- a/www/navigatepokemon.html
+++ b/www/navigatepokemon.html
@@ -1,7 +1,7 @@
-<!-- AIzaSyBUPMulDSxD5nNSr8VG5LNsLI6hzQ-5wLU -->
 <div data-role="page" id="map-page">
-    <div data-role="header" data-add-back-btn="true" data-direction="reverse">
-        <h1>Ga naar pokemon</h1>
+    <div data-role="header" data-direction="reverse">
+        <a role="button" class="ui-btn ui-corner-all ui-shadow ui-btn-left ui-toolbar-back-btn ui-icon-carat-l ui-btn-icon-left" data-rel="back" data-localized="back"></a>
+        <h1 data-localized="nav_pokemon"></h1>
     </div>
     <div class="ui-content" id="map-canvas">
     </div>
