--- a/www/pokemonview.html
+++ b/www/pokemonview.html
@@ -1,6 +1,6 @@
 <div data-role="page" id="pokemonview">
-    <div data-role="header" data-add-back-btn="true" data-direction="reverse">
-        <!--<button href="#" class="ui-btn-right" data-icon="gear"></button>-->
+    <div data-role="header" data-direction="reverse">
+        <a role="button" class="ui-btn ui-corner-all ui-shadow ui-btn-left ui-toolbar-back-btn ui-icon-carat-l ui-btn-icon-left" data-rel="back" data-localized="back"></a>
         <h1 id="pokemontitle"></h1>
     </div>
     <div class="ui-content">
