--- a/www/settings.html
+++ b/www/settings.html
@@ -1,11 +1,11 @@
 <div data-role="page" id="settingsview">
-    <div data-role="header" data-add-back-btn="true" data-direction="reverse">
-        <h1>Settings</h1>
+    <div data-role="header" data-direction="reverse">
+        <a role="button" class="ui-btn ui-corner-all ui-shadow ui-btn-left ui-toolbar-back-btn ui-icon-carat-l ui-btn-icon-left" data-rel="back" data-localized="back"></a>
+        <h1 data-localized="settings"></h1>
     </div>
     <div class="ui-content">
         <ul data-role="listview" id="settings">
 
         </ul>
     </div>
-
 </div>
